Chose to fail unknown logical types

--- a/source/Contrib.Avro.CodeGen/buildTransitive/AvroGenProps.props
+++ b/source/Contrib.Avro.CodeGen/buildTransitive/AvroGenProps.props
@@ -3,8 +3,10 @@
         <CompilerVisibleProperty Include="Avro_NamespaceMapping" />
         <CompilerVisibleProperty Include="Avro_GenerateRequiredFields" />
         <CompilerVisibleProperty Include="Avro_LogicalTypes" />
+        <CompilerVisibleProperty Include="Avro_FailUnknownLogicalTypes" />
         <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="NamespaceMapping" />
         <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="LogicalTypes" />
+        <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="FailUnknownLogicalTypes" />
         <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="GenerateRequiredFields" />
     </ItemGroup>
 </Project>
