--- a/source/Contrib.Avro.CodeGen/buildTransitive/AvroGenProps.props
+++ b/source/Contrib.Avro.CodeGen/buildTransitive/AvroGenProps.props
@@ -2,11 +2,15 @@
     <ItemGroup>
         <CompilerVisibleProperty Include="Avro_NamespaceMapping" />
         <CompilerVisibleProperty Include="Avro_GenerateRequiredFields" />
+        <CompilerVisibleProperty Include="Avro_DebuggerDisplayFields" />
+        <CompilerVisibleProperty Include="Avro_GenerateRecords" />
         <CompilerVisibleProperty Include="Avro_LogicalTypes" />
         <CompilerVisibleProperty Include="Avro_FailUnknownLogicalTypes" />
         <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="NamespaceMapping" />
         <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="LogicalTypes" />
         <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="FailUnknownLogicalTypes" />
         <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="GenerateRequiredFields" />
+        <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="DebuggerDisplayFields" />
+        <CompilerVisibleItemMetadata Include="AdditionalFiles" MetadataName="GenerateRecords" />
     </ItemGroup>
 </Project>
