--- a/tests/Contrib.Avro.CodeGen.Tests/Contrib.Avro.CodeGen.Tests.csproj
+++ b/tests/Contrib.Avro.CodeGen.Tests/Contrib.Avro.CodeGen.Tests.csproj
@@ -47,14 +47,17 @@
     </ItemGroup>
 
     <PropertyGroup>
-        <Avro_LogicalTypes></Avro_LogicalTypes>
         <Avro_FailUnknownLogicalTypes>true</Avro_FailUnknownLogicalTypes>
+        <Avro_GenerateRecords>true</Avro_GenerateRecords>
+        <Avro_GenerateRequiredFields>true</Avro_GenerateRequiredFields>
+        <Avro_DebuggerDisplayFields>required</Avro_DebuggerDisplayFields>
+        <Avro_LogicalTypes>user-id:Contrib.Avro.CodeGen.Tests.UserId</Avro_LogicalTypes>
     </PropertyGroup>
 
     <ItemGroup>
         <AdditionalFiles Include="$(PkgTest_avro_contract)\schemas\**\*.avsc"
                          NamespaceMapping="Contrib.Avro.CodeGen.Tests.Messages:Contrib.Avro.CodeGen.TestMessages"
-                         LogicalTypes="duration:System.TimeSpan,user-id:Contrib.Avro.CodeGen.Tests.UserId" />
+                         LogicalTypes="duration:System.TimeSpan" />
     </ItemGroup>
 
 </Project>
