--- a/tests/Contrib.Avro.CodeGen.Tests/Contrib.Avro.CodeGen.Tests.csproj
+++ b/tests/Contrib.Avro.CodeGen.Tests/Contrib.Avro.CodeGen.Tests.csproj
@@ -50,13 +50,13 @@
 <!--        <Avro_GenerateRequiredFields>true</Avro_GenerateRequiredFields>-->
 <!--        <Avro_DebuggerDisplayFields>required</Avro_DebuggerDisplayFields>-->
 <!--        <Avro_TypeMappings>user-id:Contrib.Avro.CodeGen.Tests.UserId</Avro_TypeMappings>-->
-        <Avro_NamespaceMapping>Contrib.Avro.CodeGen.Tests.Messages:Testing.Messages</Avro_NamespaceMapping>
+        <Avro_NamespaceMappings>Contrib.Avro.CodeGen.Tests.Messages:Testing.Messages</Avro_NamespaceMappings>
     </PropertyGroup>
 
     <ItemGroup>
         <AdditionalFiles Include="avrogen.config.json" />
         <AdditionalFiles Include="$(PkgTest_avro_contract)\schemas\**\*.avsc"
-                         NamespaceMapping="Contrib.Avro.CodeGen.Tests.Messages:Contrib.Avro.CodeGen.TestMessages"
+                         NamespaceMappings="Contrib.Avro.CodeGen.Tests.Messages:Contrib.Avro.CodeGen.TestMessages"
                          TypeMappings="duration:System.TimeSpan" />
         <AdditionalFiles Include="avro/*.avsc" TypeHintName="typeHint" />
     </ItemGroup>
