--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -49,7 +49,11 @@ jobs:
       run: |
         tree -f
         echo $PWD
-        ls /home/runner/work/Contrib.Avro/Contrib.Avro/source/Contrib.Avro.Codegen/
+        echo ls source
+        ls source
+        echo
+        echo ls source/Contrib.Avro.Codegen/
+        ls source/Contrib.Avro.Codegen/
         dotnet restore
 
     - name: Build
@@ -61,9 +65,6 @@ jobs:
           /property:AssemblyVersion=${{ env.GitVersion_AssemblySemVer }} \
           /property:FileVersion=${{ env.GitVersion_AssemblySemFileVer }} \
           /property:InformationalVersion=${{ env.GitVersion_InformationalVersion }}
-
-    - name: Setup test dependencies
-      run: docker compose up -d --wait
 
     - name: Test
       run: |
@@ -91,11 +92,6 @@ jobs:
 
     - name: Pack
       run: dotnet pack --no-restore --no-build -p:PackageVersion=${{ steps.gitversion.outputs.NuGetVersionV2 }} -o ./packages
-
-    - name: Teardown test dependencies
-      if: always()
-      run: |
-        docker compose down
 
     - name: Publish packages
       if: (github.ref == 'refs/heads/main')
