--- a/source/Contrib.Avro.CodeGen/Contrib.Avro.CodeGen.csproj
+++ b/source/Contrib.Avro.CodeGen/Contrib.Avro.CodeGen.csproj
@@ -7,7 +7,7 @@
         <Nullable>enable</Nullable>
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <IsRoslynComponent>true</IsRoslynComponent>
-        <PackageReadmeFile>../../Readme.md</PackageReadmeFile>
+        <PackageReadmeFile>Readme.md</PackageReadmeFile>
         <Authors>Alexey Raga</Authors>
         <Copyright>Alexey Raga</Copyright>
         <RepositoryUrl>https://github.com/AlexeyRaga/Contrib.Avro</RepositoryUrl>
