--- a/source/Contrib.Avro.CodeGen/Contrib.Avro.CodeGen.csproj
+++ b/source/Contrib.Avro.CodeGen/Contrib.Avro.CodeGen.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <IncludeBuildOutput>false</IncludeBuildOutput> <!-- Do not include the generator as a lib dependency -->
+        <IncludeSymbols>false</IncludeSymbols>
         <LangVersion>12</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -24,6 +26,7 @@
 
     <ItemGroup>
         <None Include="buildTransitive\Contrib.Avro.CodeGen.props" Pack="true" PackagePath="buildTransitive/" />
+        <None Include="$(OutputPath)\*.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     </ItemGroup>
 
     <ItemGroup>
