--- a/source/Contrib.Avro.CodeGen/Contrib.Avro.CodeGen.csproj
+++ b/source/Contrib.Avro.CodeGen/Contrib.Avro.CodeGen.csproj
@@ -36,6 +36,11 @@
               Pack="true"
               PackagePath="analyzers/dotnet/cs"
               Visible="false" />
+
+        <None Include="$(PkgSystem_CodeDom)\lib\netstandard2.0\System.CodeDom.dll"
+              Pack="true"
+              PackagePath="analyzers/dotnet/cs"
+              Visible="false" />
     </ItemGroup>
 
     <ItemGroup>
